# qsim

./: .cursorrules  .flake8  LICENSE  Makefile  README.md  mypy.ini  pyproject.toml  run_tests.py  setup.py
benchmarks/: scaling_ghz.py
docs/: components.md
examples/: README.md  __init__.py  basic_usage.py  grovers_search.py  hybrid_simulation_benchmark.py  multi_qudit_simulation.py  quantum_error_correction.py  quantum_phase_estimation.py  variational_quantum_eigensolver.py
qsim/: __init__.py  main.py
qsim/analysis/: circuit_analyzer.py
qsim/core/: circuit.py  config.py  constants.py  qudit.py
qsim/execution/: hybrid_execution_manager.py  simulator.py
qsim/gates/: __init__.py  base.py  controlled.py  hadamard.py  multi_controlled.py  permutation.py  phase.py
qsim/states/: __init__.py  base.py  sparse_state_vector.py  state_vector.py  tensor_network_state.py
qsim/utils/: circuit_builders.py
tests/: README.md  __init__.py  test_analysis.py  test_bell_state.py  test_circuit_builders.py  test_core.py  test_execution.py  test_gates.py  test_generalized_bell_state.py  test_ghz_state.py  test_grovers_search.py  test_multi_controlled_gate.py  test_qft.py  test_states.py
