[project]
name = "qsim"
version = "0.1.0"
description = "Hybrid Quantum Circuit Simulator"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "networkx>=2.6.0",
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "tensornetwork>=0.4.0",
    "psutil>=5.9.0",
    "matplotlib>=3.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-watch>=4.2.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.10.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
